added documentation hopefully

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </header>
     <div id="main" role="main">
-
+		<div id='target-element'>Move the mouse, click it, who cares?</div>
     </div>
     <footer>
 
