--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </header>
     <div id="main" role="main">
-		<div id='target-element'>Move the mouse, click it, who cares?</div>
+		<span id='target-element'>Just type stuff.</span>
     </div>
     <footer>
 
@@ -50,8 +50,7 @@
   <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  <script src="js/libs/jquery-1.6.2.min.js"></script>
 
 
   <!-- scripts concatenated and minified via ant build script-->
