fixed fixing the demo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>windowEvents.backbone.js - wrapping stuff in Backbone.Events</title>
+  <title>domEvents.backbone.js - wrapping stuff in Backbone.Events</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -39,7 +39,8 @@
 
     </header>
     <div id="main" role="main">
-		<span id='target-element'>Just type stuff.</span>
+		<div id='event-types-list'></div>
+		<div id='target-element'>Just type stuff.  It's particularly useful if you hold down a key for a while.</div>
     </div>
     <footer>
 
